--- a/Source/GitTime.Web/Views/Shared/_Layout.cshtml
+++ b/Source/GitTime.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     if (isDeveloper || isAdministrator)
     {
         userMenu.Add(new List<MvcHtmlString>(new[] {
-            Html.ActionLink("Issues", "Index", "GitHub"),
+            Html.ActionLink("Issues", "Find", "Issue"),
             Html.ActionLink("Timecards", "Find", "Timecard")
         }));
     }
@@ -64,7 +64,7 @@
                     @if (userMenu.Count > 0)
                     {
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">@userName</a>
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">@Html.Raw(userName)</a>
 
                             <ul class="dropdown-menu">
                                 @for(var i = 0; i < userMenu.Count; i++)
